add the missing modals and country to mainnav

--- a/app/complete-profile.html
+++ b/app/complete-profile.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>SMBeez : Dashboard</title>
+    <title>SMBeez : Dashboard Company</title>
 
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <!-- Place favicon.ico in the root directory -->
@@ -113,14 +113,127 @@
                     </div>
                   </li>
                 </ul>
-
+                <button class="btn-dash btn-blue btn-yellow mt-3">Publish New Project</button>
               </div>
-              <div class="alert alert-secondary alert-dismissible fade show" role="alert">
-                <h3><i class="fa fa-thumb-tack fa-rotate-45" aria-hidden="true"></i> Tips</h3>
-                <p>s conscious traveling Paupers we must always be concerned about our dear Mother Earth. If you</p>
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                  <span aria-hidden="true">&times;</span>
-                </button>
+
+            </div>
+            <div class="col-md-6">
+              <nav aria-label="breadcrumb" role="navigation">
+                <ol class="breadcrumb">
+                  <li class="breadcrumb-item"><a href="#">My Dashboard</a></li>
+                  <li class="breadcrumb-item active" aria-current="page">My Profile</li>
+                </ol>
+              </nav>
+
+              <div class="dashboard-company-block">
+                  <div class="d-flex justify-content-between">
+                    <div>
+                      <a  href="" class="edit-thumb">
+                        <i class="fa fa-pencil-square-o align-self-center " aria-hidden="true"></i>
+                      </a>
+                    </div>
+                    <div class="media-body px-3">
+                      <h5 class="mt-1">Loay Youssef</h5>
+                      <p class="tags"><b>Account Manager</b></p>
+                    </div>
+                    <div>
+                      <a href="" class="btn btn-sm btn-blue btn-yellow-2">Settings</a>
+                    </div>
+                  </div>
+
+                </div>
+
+              <div class="dashboard-company-block my-3">
+                <table class="table table-striped">
+                  <thead class="thead-blue">
+                    <tr>
+                      <th scope="col">Basic information</th>
+                      <th scope="col"  class="text-right"><a href="">Edit my Details</a></th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td scope="row"><b>Company name</b></td>
+                      <td>Cloud Concept</td>
+                    </tr>
+                    <tr>
+                      <td scope="row"><b>Company Tag Line</b></td>
+                      <td>Cloud Concept</td>
+                    </tr>
+                    <tr>
+                      <td scope="row"><b>Website</b></td>
+                      <td>Cloud Concept</td>
+                    </tr>
+                    <tr>
+                      <td scope="row"><b>Email</b></td>
+                      <td>Cloud Concept  <b>(Verified)</b></td>
+                    </tr>
+                    <tr>
+                      <td scope="row"><b>Phone</b></td>
+                      <td>Cloud Concept</td>
+                    </tr>
+                    <tr>
+                      <td scope="row"><b>LinkedIn Profile</b></td>
+                      <td>Cloud Concept</td>
+                    </tr>
+                    <tr>
+                      <td scope="row"><b>Company Size</b></td>
+                      <td>Cloud Concept</td>
+                    </tr>
+                    <tr>
+                      <td scope="row"><b>Year Founded</b></td>
+                      <td>Cloud Concept</td>
+                    </tr>
+                    <tr>
+                      <td scope="row"><b>Company Type</b></td>
+                      <td>Cloud Concept</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+
+            </div>
+            <div class="col-md-3">
+              <div class="sidebar-subscription mb-4">
+                <h4 class="border-b">My subscription</h4>
+                <p>All SMBeez features are open for
+6 months. You are on the highest subscription tier now, but you ll be downgraded to the free tier at 23/3/2018</p>
+              </div>
+
+              <div class="sidebar-mycompany mb-4">
+                <h4 class="border-b">My Company</h4>
+                <div class="media-body">
+                  <a href=""><i class="fa fa-2x fa-pencil-square-o pull-right" aria-hidden="true"></i></a>
+                  <h5 class="mt-1 mb-2"><a href="">Cloud Concept</a></h5>
+                  <p class="tags"><b>Industry</b>:<a href="">Manufacturing, Transportation and Warehousing</a></p>
+                  <p class="tags"><b>Specialities:</b> <span>Electrical Supplies, Sales force, Electrical Supplies, Sales force</span></p>
+                </div>
+              </div>
+
+              <div class="sidebar-review-rating mt-4">
+                <div class="rating-sidebar-block">
+                <h5 class="mb-3">My reviews</h5>
+                  <div class="star-rating mb-3">
+                    <ul class="list-inline">
+                      <li class="active list-inline-item"><a href=""><i class="fa fa-star" aria-hidden="true"></i></a></li>
+                      <li class="active list-inline-item"><a href=""><i class="fa fa-star" aria-hidden="true"></i></a></li>
+                      <li class="active list-inline-item"><a href=""><i class="fa fa-star" aria-hidden="true"></i></a></li>
+                      <li class="active list-inline-item"><a href=""><i class="fa fa-star" aria-hidden="true"></i></a></li>
+                      <li class="list-inline-item"><a href=""><i class="fa fa-star" aria-hidden="true"></i></a></li>
+                    </ul>
+                    <a href="">(239) Reviews from customers</a>
+                  </div>
+                  <div class="star-rating">
+                    <ul class="list-inline">
+                      <li class="active list-inline-item"><a href=""><i class="fa fa-star" aria-hidden="true"></i></a></li>
+                      <li class="active list-inline-item"><a href=""><i class="fa fa-star" aria-hidden="true"></i></a></li>
+                      <li class="active list-inline-item"><a href=""><i class="fa fa-star" aria-hidden="true"></i></a></li>
+                      <li class="active list-inline-item"><a href=""><i class="fa fa-star" aria-hidden="true"></i></a></li>
+                      <li class="list-inline-item"><a href=""><i class="fa fa-star" aria-hidden="true"></i></a></li>
+                    </ul>
+                    <a href="">(12) Reviews from suppliers</a>
+                  </div>
+                </div>
               </div>
               <div class="sidebar-updates mt-5">
                 <h5 class="title-blue">Updates (32)</h5>
@@ -134,207 +247,10 @@
                 </ul>
               </div>
             </div>
-
-
-            <div class="col-md-9">
-              <ul class="dashbord-quickbtn nav nav-pills nav-fill">
-                <li  class="nav-item">
-                  <button class="btn-dash btn-blue btn-yellow" data-toggle="modal" data-target="#add-project" >Publish New Project</button>
-                  <span class="inf">(900 <i>Honeycombs</i>)</span>
-                </li>
-                <li  class="nav-item">
-                  <button class="btn-dash btn-blue btn-yellow">Submit a Review</button>
-                  <span class="inf">(900 <i>Honeycombs</i>)</span>
-                </li>
-                <li  class="nav-item">
-                  <button class="btn-dash btn-blue btn-yellow"><i class="fa fa-cubes mr-1" aria-hidden="true"></i> Redeem Honeycombs</button>
-                  <span class="inf">(900 <i>Honeycombs</i>)</span>
-                </li>
-              </ul>
-
-
-              <h4>Published projects (18)</h4>
-              <table class="table table-striped ">
-                <thead class="thead-blue">
-                  <tr>
-                    <th scope="col">Project name</th>
-                    <th scope="col">Status</th>
-                    <th scope="col">Suppliers</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td scope="row"><a href="">Fta Keys</a></td>
-                    <td>Expired</td>
-                    <td>NA</td>
-                  </tr>
-                  <tr>
-                    <td scope="row"><a href="">Promote With Postcards</a></td>
-                    <td>Open <span class="sm-info">(Expires in 2 weeks)</span></td>
-                    <td><a href="">(4) Express Interest</a></td>
-                  </tr>
-                  <tr>
-                    <td scope="row"><a href="">Fta Keys</a></td>
-                    <td>Expired</td>
-                    <td>NA</td>
-                  </tr>
-                  <tr>
-                    <td scope="row"><a href="">Promote With Postcards</a></td>
-                    <td>Open <span class="sm-info">(Expires in 2 weeks)</span></td>
-                    <td><a href="">(4) Express Interest</a></td>
-                  </tr>
-                </tbody>
-              </table>
-
-              <h4>Project Applications (8)</h4>
-              <table class="table table-striped ">
-                <thead class="thead-blue">
-                  <tr>
-                    <th scope="col">Project name</th>
-                    <th scope="col">Status</th>
-                    <th scope="col">Suppliers</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td scope="row"><a href="">Fta Keys</a></td>
-                    <td>Expired</td>
-                    <td>NA</td>
-                  </tr>
-                  <tr>
-                    <td scope="row"><a href="">Promote With Postcards</a></td>
-                    <td>Open</td>
-                    <td><a href="">(4) Express Interest</a></td>
-                  </tr>
-                  <tr>
-                    <td scope="row"><a href="">Fta Keys</a></td>
-                    <td>Expired</td>
-                    <td>NA</td>
-                  </tr>
-                  <tr>
-                    <td scope="row"><a href="">Promote With Postcards</a></td>
-                    <td>Open</span></td>
-                    <td><a href="">(4) Express Interest</a></td>
-                  </tr>
-                </tbody>
-              </table>
-
-            </div>
           </div>
         </div>
       </section>
   	</main>
-
-    <!-- Add Project Model -->
-    <div class="modal fade modal-fullscreen modal-add-project" id="add-project" tabindex="-1" role="dialog" aria-labelledby="add-project" aria-hidden="true">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-
-          <div class="modal-header">
-            <div class="container">
-              <div class="row">
-                <div class="col-md-12">
-                  <h5 class="modal-title">Publish New Project</h5>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="modal-body">
-            <form action="" class="form-signup mt-2">
-            <div class="container">
-              <div class="row">
-                <div class="col">
-                  <div class="form-group">
-                    <label for="">Project Title</label>
-                    <input type="text" class="form-control" placeholder="">
-                  </div>
-                </div>
-                <div class="col">
-                  <div class="form-group">
-                    <label for="">Industry</label>
-                    <select class="form-control custom-select d-block" required>
-                     <option value="">Open this select menu</option>
-                     <option value="1">One</option>
-                     <option value="2">Two</option>
-                     <option value="3">Three</option>
-                   </select>
-                  </div>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col">
-                  <div class="form-group">
-                    <label for="">Project Description</label>
-                    <textarea class="form-control"></textarea>
-                  </div>
-                </div>
-                <div class="col">
-                  <div class="form-group">
-                    <label for="">Speciality</label>
-                    <input type="text" class="form-control" placeholder="">
-                    <p class="form-guide">Write your keywords separated with commas</p>
-                  </div>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col">
-                  <div class="form-group">
-                    <label for="">Estimated Budget</label>
-                    <select class="form-control custom-select d-block" required>
-                     <option value="">Open this select menu</option>
-                     <option value="1">One</option>
-                     <option value="2">Two</option>
-                     <option value="3">Three</option>
-                   </select>
-                  </div>
-                </div>
-                <div class="col">
-                  <div class="form-group">
-                    <label for="">Supportive Documents</label>
-                    <label class="custom-file">
-                       <input type="file" id="file2" class="custom-file-input">
-                       <span class="custom-file-control"></span>
-                    </label>
-                    <p class="form-guide">Upload your company registration documents to get a verified badge on your company profile</p>
-                  </div>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-md-6">
-                  <div class="form-group">
-                    <label for="">Status</label>
-                    <select class="form-control custom-select d-block" required>
-                     <option value="">Open this select menu</option>
-                     <option value="1">One</option>
-                     <option value="2">Two</option>
-                     <option value="3">Three</option>
-                   </select>
-                   <p class="form-guide">The project will be automatically closed within
-60 days, you can set your project status to “Draft”,
-“Open”, “Closed” whenever you need. </p>
-                  </div>
-                </div>
-
-              </div>
-              <div class="row">
-                <div class="col">
-                  <div class="btn-list text-center my-3">
-                    <a href="" class="btn btn-blue mr-3">Save & Exit</a>
-                    <a href="" class="btn btn-blue">Publish Project</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- /Add Project Model -->
 
     <footer class="footer">
       <div class="container-fluid">
