--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,7 @@
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="/bower_components/animate.css/animate.css" />
+    <link rel="stylesheet" href="/bower_components/flag-icon-css/css/flag-icon.min.css" />
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -60,6 +61,7 @@
               <li class="list-group-item"><a href="dashboard-published-projects.html">Dashboard Published Projects</a></li>
               <li class="list-group-item"><a href="dashboard-messages.html">Dashboard Messages</a></li>
               <li class="list-group-item"><a href="dashboard-bookmarks.html">Dashboard bookmarks</a></li>
+              <li class="list-group-item"><a href="complete-profile.html">Complete Profile</a></li>
 
             </ul>
           </div>
