--- a/app/home.html
+++ b/app/home.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="description" content="">
@@ -12,6 +12,7 @@
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="/bower_components/animate.css/animate.css" />
+    <link rel="stylesheet" href="/bower_components/flag-icon-css/css/flag-icon.min.css" />
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -38,7 +39,7 @@
   			<ul class="cd-main-nav">
   				<li><a href="#">About</a></li>
   				<li><a href="#">Companies</a></li>
-  				<li class="nav-item  dropdown">
+  				<li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Projects</a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="#">Project List#1</a>
@@ -51,7 +52,18 @@
               <a class="dropdown-item" href="#">Project List#5</a>
             </div>
           </li>
-  				<li><a href="#">Sign in</a></li>
+          <li class="nav-item dropdown flags-dropdown">
+            <a class="nav-link dropdown-toggle " href="#" id="navbarDropdown2" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <span class="flag-icon flag-icon-ae "></span>
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
+              <a class="dropdown-item" href="#"><span class="flag-icon flag-icon-eg"></span></a>
+              <a class="dropdown-item" href="#"><span class="flag-icon flag-icon-sa"></span></a>
+              <a class="dropdown-item" href="#"><span class="flag-icon flag-icon-kw"></span></a>
+            </div>
+          </li>
+
+  				<li><a href="#" data-toggle="modal" data-target="#signup" >Sign in</a></li>
   			</ul> <!-- .cd-main-nav -->
   		</nav> <!-- .cd-main-nav-wrapper -->
   		<a href="#" class="cd-nav-trigger cd-text-replace">Menu<span></span></a>
@@ -66,7 +78,7 @@
             <h1 class="text-center">Matchmaking for Small Businesses</h1>
             <p class="text-center">Find work and source suppliers in your local marketplace...</p>
             <div class="btn-hero text-center">
-              <a href="#" class="btn btn-blue">Add your company</a>
+              <a href="#" data-toggle="modal" data-target="#add-company"  class="btn btn-blue">Add your company</a>
               <span class=""> or </span>
               <a href="#" class="btn btn-blue ">publish your project</a>
             </div>
@@ -254,6 +266,158 @@
         </div>
       </section>
   	</main>
+
+    <!-- Login Model -->
+    <div class="modal fade modal-singup" id="signup" tabindex="-1" role="dialog" aria-labelledby="signup" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+
+          <div class="modal-header">
+            <div class="container">
+              <div class="row">
+                <div class="col-md-12 text-center">
+                  <h3 class="modal-title py-4">Create your new SMBeez account</h3>
+                  <div class="btn-list mt-3 mb-4">
+                    <a class="btn btn-lk mr-3" href=""> <i class="fa fa-linkedin" aria-hidden="true"></i> Sign Up With Linkedin</a>
+                    <a class="btn btn-fb mr-3"  href=""><i class="fa fa-facebook" aria-hidden="true"></i> Sign Up With Facebook</a>
+                  </div>
+                  <div class="line-border text-center col-md-3 mr-auto mt-5 mb-3">
+                    <span>Or Sign in to your account</span>
+                  </div>
+                  <div class="col-md-6 mr-auto">
+                  <form action="" class="form-signin mb-4">
+                    <div class="row">
+                      <div class="col">
+                        <input type="text" class="form-control" placeholder="Username / Email">
+                      </div>
+                      <div class="col">
+                        <input type="text" class="form-control" placeholder="Password">
+                      </div>
+                    </div>
+                  </form>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- /Login Model -->
+
+
+    <!-- Add Company Model -->
+    <div class="modal fade modal-fullscreen modal-add-company" id="add-company" tabindex="-1" role="dialog" aria-labelledby="add-company" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+
+          <div class="modal-header">
+            <div class="container">
+              <div class="row">
+                <div class="col-md-12">
+                  <h5 class="modal-title">Add your company</h5>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="modal-body">
+            <form action="" class="form-signup mt-2">
+            <div class="container">
+              <div class="row">
+                <div class="col">
+                  <div class="form-group">
+                    <label for="">Company name</label>
+                    <input type="text" class="form-control" placeholder="">
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="form-group">
+                    <label for="">Industry</label>
+                    <select class="form-control custom-select d-block" required>
+                     <option value="">Open this select menu</option>
+                     <option value="1">One</option>
+                     <option value="2">Two</option>
+                     <option value="3">Three</option>
+                   </select>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col">
+                  <div class="form-group">
+                    <label for="">Website</label>
+                    <input type="text" class="form-control" placeholder="">
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="form-group">
+                    <label for="">Speciality</label>
+                    <input type="text" class="form-control" placeholder="">
+                    <p class="form-guide">Write your keywords separated with commas</p>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col">
+                  <div class="form-group">
+                    <label for="">Linkedin Profile</label>
+                    <input type="text" class="form-control" placeholder="">
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="form-group">
+                    <label for="">Company Type</label>
+                    <select class="form-control custom-select d-block" required>
+                     <option value="">Open this select menu</option>
+                     <option value="1">One</option>
+                     <option value="2">Two</option>
+                     <option value="3">Three</option>
+                   </select>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col">
+                  <div class="form-group">
+                    <label for="">What is your company Tagline or main message?</label>
+                    <textarea class="form-control"></textarea>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="form-group">
+                    <label for="">Registration Documents</label>
+                    <label class="custom-file">
+                       <input type="file" id="file2" class="custom-file-input">
+                       <span class="custom-file-control"></span>
+                    </label>
+                    <p class="form-guide">Upload your company registration documents to get a verified badge on your company profile</p>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col">
+                  <div class="btn-list text-center my-3">
+                    <a href="" class="btn btn-blue mr-3">Save & Exit</a>
+                    <a href="" class="btn btn-blue">Continue Editing</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- /Add Company Model -->
+
+
     <footer class="footer">
       <div class="container-fluid">
         <div class="row">
