--- a/app/dashboard.html
+++ b/app/dashboard.html
@@ -36,7 +36,6 @@
   		<nav class="cd-main-nav-wrapper">
   			<a href="#search" class="cd-search-trigger"></a>
   			<ul class="cd-main-nav">
-  				<li><a href="#">About</a></li>
   				<li><a href="#">Companies</a></li>
   				<li class="nav-item  dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Projects</a>
@@ -51,6 +50,17 @@
               <a class="dropdown-item" href="#">Project List#5</a>
             </div>
           </li>
+          <li class="nav-item dropdown flags-dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <span class="flag-icon flag-icon-ae"></span>
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
+              <a class="dropdown-item" href="#"><span class="flag-icon flag-icon-eg"></span></a>
+              <a class="dropdown-item" href="#"><span class="flag-icon flag-icon-sa"></span></a>
+              <a class="dropdown-item" href="#"><span class="flag-icon flag-icon-kw"></span></a>
+            </div>
+          </li>
+          
           <li class="nav-item dropdown usernav">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img src="images/media/user.jpg" alt="UserName"></a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -461,6 +471,7 @@
     <script src="/bower_components/jquery/dist/jquery.js"></script>
     <script src="/bower_components/modernizr/modernizr.js"></script>
     <script src="/bower_components/scrollreveal/dist/scrollreveal.js"></script>
+    <script src="/bower_components/jquery-bar-rating/jquery.barrating.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
