--- a/app/search-result-company.html
+++ b/app/search-result-company.html
@@ -76,11 +76,15 @@
                   <h2 class="mt-1 mb-1"><a href="">A Good Autoresponder </a></h2>
                   <div class="star-rating">
                     <ul class="list-inline">
-                      <li class="active list-inline-item"><a href=""><i class="fa fa-star" aria-hidden="true"></i></a></li>
-                      <li class="active list-inline-item"><a href=""><i class="fa fa-star" aria-hidden="true"></i></a></li>
-                      <li class="active list-inline-item"><a href=""><i class="fa fa-star" aria-hidden="true"></i></a></li>
-                      <li class="active list-inline-item"><a href=""><i class="fa fa-star" aria-hidden="true"></i></a></li>
-                      <li class="list-inline-item"><a href=""><i class="fa fa-star" aria-hidden="true"></i></a></li>
+                      <li class="list-inline-item">
+                        <select class="star-rating-fn">
+                          <option value="1">1</option>
+                          <option value="2">2</option>
+                          <option value="3">3</option>
+                          <option value="4">4</option>
+                          <option value="5">5</option>
+                        </select>
+                      </li>
                       <li class="list-inline-item thumb-review"><a href="">(35 Reviews)</a></li>
                     </ul>
                   </div>
@@ -102,12 +106,15 @@
                   <h2 class="mt-1 mb-1"><a href="">A Good Autoresponder </a></h2>
                   <div class="star-rating">
                     <ul class="list-inline">
-                      <li class="active list-inline-item"><a href=""><i class="fa fa-star" aria-hidden="true"></i></a></li>
-                      <li class="active list-inline-item"><a href=""><i class="fa fa-star" aria-hidden="true"></i></a></li>
-                      <li class="active list-inline-item"><a href=""><i class="fa fa-star" aria-hidden="true"></i></a></li>
-                      <li class="active list-inline-item"><a href=""><i class="fa fa-star" aria-hidden="true"></i></a></li>
-                      <li class="list-inline-item"><a href=""><i class="fa fa-star" aria-hidden="true"></i></a></li>
-                      <li class="list-inline-item thumb-review"><a href="">(35 Reviews)</a></li>
+                      <li class="list-inline-item">
+                        <select class="star-rating-fn">
+                          <option value="1">1</option>
+                          <option value="2">2</option>
+                          <option value="3">3</option>
+                          <option value="4">4</option>
+                          <option value="5">5</option>
+                        </select>
+                      </li>                      <li class="list-inline-item thumb-review"><a href="">(35 Reviews)</a></li>
                     </ul>
                   </div>
                 </div>
@@ -128,12 +135,15 @@
                   <h2 class="mt-1 mb-1"><a href="">A Good Autoresponder </a></h2>
                   <div class="star-rating">
                     <ul class="list-inline">
-                      <li class="active list-inline-item"><a href=""><i class="fa fa-star" aria-hidden="true"></i></a></li>
-                      <li class="active list-inline-item"><a href=""><i class="fa fa-star" aria-hidden="true"></i></a></li>
-                      <li class="active list-inline-item"><a href=""><i class="fa fa-star" aria-hidden="true"></i></a></li>
-                      <li class="active list-inline-item"><a href=""><i class="fa fa-star" aria-hidden="true"></i></a></li>
-                      <li class="list-inline-item"><a href=""><i class="fa fa-star" aria-hidden="true"></i></a></li>
-                      <li class="list-inline-item thumb-review"><a href="">(35 Reviews)</a></li>
+                      <li class="list-inline-item">
+                        <select class="star-rating-fn">
+                          <option value="1">1</option>
+                          <option value="2">2</option>
+                          <option value="3">3</option>
+                          <option value="4">4</option>
+                          <option value="5">5</option>
+                        </select>
+                      </li>                      <li class="list-inline-item thumb-review"><a href="">(35 Reviews)</a></li>
                     </ul>
                   </div>
                 </div>
@@ -289,6 +299,7 @@
     <script src="/bower_components/jquery/dist/jquery.js"></script>
     <script src="/bower_components/modernizr/modernizr.js"></script>
     <script src="/bower_components/scrollreveal/dist/scrollreveal.js"></script>
+    <script src="/bower_components/jquery-bar-rating/jquery.barrating.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
