--- a/app/dashboard-bookmarks.html
+++ b/app/dashboard-bookmarks.html
@@ -120,12 +120,15 @@
                         <p class="thumb-title mt-1 mb-1">A Good Autoresponder</p>
                         <div class="star-rating">
                           <ul class="list-inline">
-                            <li class="active list-inline-item"><a href=""><i class="fa fa-star" aria-hidden="true"></i></a></li>
-                            <li class="active list-inline-item"><a href=""><i class="fa fa-star" aria-hidden="true"></i></a></li>
-                            <li class="active list-inline-item"><a href=""><i class="fa fa-star" aria-hidden="true"></i></a></li>
-                            <li class="active list-inline-item"><a href=""><i class="fa fa-star" aria-hidden="true"></i></a></li>
-                            <li class="list-inline-item"><a href=""><i class="fa fa-star" aria-hidden="true"></i></a></li>
-                            <li class="list-inline-item thumb-review"><a href="">(35 Reviews)</a></li>
+                            <li class="list-inline-item">
+                              <select class="star-rating-fn">
+                                <option value="1">1</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                                <option value="4">4</option>
+                                <option value="5">5</option>
+                              </select>
+                            </li>                            <li class="list-inline-item thumb-review"><a href="">(35 Reviews)</a></li>
                           </ul>
                         </div>
                       </div>
@@ -145,12 +148,15 @@
                         <p class="thumb-title mt-1 mb-1">A Good Autoresponder</p>
                         <div class="star-rating">
                           <ul class="list-inline">
-                            <li class="active list-inline-item"><a href=""><i class="fa fa-star" aria-hidden="true"></i></a></li>
-                            <li class="active list-inline-item"><a href=""><i class="fa fa-star" aria-hidden="true"></i></a></li>
-                            <li class="active list-inline-item"><a href=""><i class="fa fa-star" aria-hidden="true"></i></a></li>
-                            <li class="active list-inline-item"><a href=""><i class="fa fa-star" aria-hidden="true"></i></a></li>
-                            <li class="list-inline-item"><a href=""><i class="fa fa-star" aria-hidden="true"></i></a></li>
-                            <li class="list-inline-item thumb-review"><a href="">(35 Reviews)</a></li>
+                            <li class="list-inline-item">
+                              <select class="star-rating-fn">
+                                <option value="1">1</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                                <option value="4">4</option>
+                                <option value="5">5</option>
+                              </select>
+                            </li>                            <li class="list-inline-item thumb-review"><a href="">(35 Reviews)</a></li>
                           </ul>
                         </div>
                       </div>
@@ -325,6 +331,7 @@
     <script src="/bower_components/jquery/dist/jquery.js"></script>
     <script src="/bower_components/modernizr/modernizr.js"></script>
     <script src="/bower_components/scrollreveal/dist/scrollreveal.js"></script>
+    <script src="/bower_components/jquery-bar-rating/jquery.barrating.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
