add signup page & search Page

--- a/app/index.html
+++ b/app/index.html
@@ -42,6 +42,7 @@
             <h1 class="mt-4 mb-4">List Pages</h1>
             <ul class="list-group">
               <li class="list-group-item"><a href="home.html">Home Page</a></li>
+              <li class="list-group-item"><a href="signin.html">Sign In</a></li>
               <li class="list-group-item"><a href="project-listing.html">Project List</a></li>
               <li class="list-group-item"><a href="project-details.html">Project Details</a></li>
               <li class="list-group-item"><a href="company-listing.html">Company List</a></li>
@@ -49,6 +50,8 @@
               <li class="list-group-item"><a href="search-result-projects.html">Search Result Project</a></li>
               <li class="list-group-item"><a href="search-result-company.html">Search Result Company</a></li>
               <li class="list-group-item"><a href="all-projects-industries.html">All Projects Industries</a></li>
+              <li class="list-group-item"><a href="search-page.html">Search Page (new)</a></li>
+
             </ul>
           </div>
           <div class="col-md-6">
