--- a/app/dashboard.html
+++ b/app/dashboard.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="description" content="">
@@ -60,7 +60,7 @@
               <a class="dropdown-item" href="#"><span class="flag-icon flag-icon-kw"></span></a>
             </div>
           </li>
-          
+
           <li class="nav-item dropdown usernav">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img src="images/media/user.jpg" alt="UserName"></a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -305,8 +305,8 @@
                   <div class="form-group">
                     <label for="">Supportive Documents</label>
                     <label class="custom-file">
-                       <input type="file" id="file2" class="custom-file-input">
-                       <span class="custom-file-control"></span>
+                      <input type="file" id="file2" class="custom-file-input">
+                       <span class="custom-file-control" data-label="asdsads here"></span>
                     </label>
                     <p class="form-guide">Upload your company registration documents to get a verified badge on your company profile</p>
                   </div>
