--- a/app/home.html
+++ b/app/home.html
@@ -50,15 +50,8 @@
               <a class="dropdown-item" href="#">Project List#5</a>
             </div>
           </li>
-          <li class="nav-item dropdown flags-dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              <span class="flag-icon flag-icon-ae"></span>
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
-              <a class="dropdown-item" href="#"><span class="flag-icon flag-icon-eg"></span></a>
-              <a class="dropdown-item" href="#"><span class="flag-icon flag-icon-sa"></span></a>
-              <a class="dropdown-item" href="#"><span class="flag-icon flag-icon-kw"></span></a>
-            </div>
+          <li>
+            <a href=""><span class="flag-icon flag-icon-ae"></span> Dubai</a>
           </li>
 
   				<li><a href="#">Sign in</a></li>
