--- a/app/signin.html
+++ b/app/signin.html
@@ -25,7 +25,7 @@
     <script src="/bower_components/modernizr/modernizr.js"></script>
     <!-- endbuild -->
   </head>
-  <body class="singup">
+  <body>
     <!--[if IE]>
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
@@ -67,7 +67,7 @@
   		<a href="#" class="cd-nav-trigger cd-text-replace">Menu<span></span></a>
   	</header>
 
-  	<main class="cd-main-content">
+  	<main class="cd-main-content signup">
   		<!-- your content here -->
       <section class="sign-section">
         <div class="container-fluid">
@@ -83,7 +83,7 @@
             </li>
           </ul>
           <div class="tab-content py-5 px-4" id="tabs-content-signup">
-            <div class="tab-pane fade show active" id="signup" role="tabpanel" aria-labelledby="singup-tab">
+            <div class="tab-pane fade show active" id="signup" role="tabpanel" aria-labelledby="-tab">
               <p class="text-center mb-3">
                 MCSE boot camps have its supporters and its detractors. Some people do not understand why you should have to spend money on boot camp when you can
               </p>
@@ -121,7 +121,7 @@
               </div>
             </div>
             <div class="tab-pane fade" id="create-account" role="tabpanel" aria-labelledby="create-account-tab">
-              <h2 class="py-2 text-center">Create your new SMBeez account</h3>
+              <h2 class="py-2 text-center">Create your new SMBeez account</h2>
               <div class="btn-list mt-3 mb-4 text-center">
                 <a class="btn btn-lk mr-3" href=""> <i class="fa fa-linkedin" aria-hidden="true"></i> Sign Up With Linkedin</a>
                 <a class="btn btn-fb mr-3"  href=""><i class="fa fa-facebook" aria-hidden="true"></i> Sign Up With Facebook</a>
@@ -192,7 +192,7 @@
   	</main>
 
     <!-- Login Model -->
-    <div class="modal fade modal-singup" id="signup" tabindex="-1" role="dialog" aria-labelledby="signup" aria-hidden="true">
+    <div class="modal fade modal-" id="signup" tabindex="-1" role="dialog" aria-labelledby="signup" aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
