--- a/app/index.html
+++ b/app/index.html
@@ -51,6 +51,7 @@
               <li class="list-group-item"><a href="search-result-company.html">Search Result Company</a></li>
               <li class="list-group-item"><a href="all-projects-industries.html">All Projects Industries</a></li>
               <li class="list-group-item"><a href="search-page.html">Search Page (new)</a></li>
+              <li class="list-group-item"><a href="about.html">About us (new)</a></li>
 
             </ul>
           </div>
